--- a/index.html
+++ b/index.html
@@ -180,7 +180,24 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-
+<script type="text/javascript">
+  var fireballSize = 22;
+  function getFireballSpeed(isHeadWind) {
+    if (!isHeadWind) {
+      return 5
+    }
+    return 2
+  }
+  var wizardWidth = 70;
+  var wizardHeight = wizardWidth * 1.337
+  var wizardSpeed = 9;
+  function getWizardX(gameFieldWidth) {
+    return (gameFieldWidth - wizardHeight) / 2;
+  }
+  function getWizardY(gameFieldHeight) {
+    return gameFieldHeight / 3;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
